slight adjustment to page width, adding back back to top, my theoretical fix to the sometimes stuff looking weird problem on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,7 +28,7 @@ $main_orange: #EB4D18;
 
 .container{
   max-width: none !important;
-  width: 1200px !important;
+  width: 1210px !important;
 }
 
 .row{
@@ -336,7 +336,7 @@ input.error-true  {
 .nav-container{
 	border-bottom: 1px solid rgb(150, 150, 150);
 	display: block;
-	width: 1200px;
+	width: 1210px;
 	margin: 10px auto 20px auto;
 	font-size: 12px;
 	a{
@@ -468,7 +468,7 @@ input.error-true  {
 .nav-container-footer{
 	border-top: 1px solid rgb(150, 150, 150);
 	display: block;
-	width: 1200px;
+	width: 1210px;
 	margin: 20px auto 10px auto;
 	font-size: 12px;
 }
