--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -84,7 +84,7 @@ $main_orange: #EB4D18;
 			position: relative;
 			z-index: 1;
 			height: 700px;
-			width: auto;
+			min-width: 1210px;
 			img{
 				width: 100%;
 				background: no-repeat;
